--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
-# Required metadata
-sonar.projectKey=org.sonarqube:scmgalaxy1
-sonar.projectName=SubuDemo
+# Unique key for the project in SonarQube
+sonar.projectKey=pavan-jen-integration
+
+# Name of the project
+sonar.projectName=pavan-jen-integration
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
