--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,6 @@
-# Unique key for the project in SonarQube
-sonar.projectKey=pavan-jen-integration
-
-# Name of the project
-sonar.projectName=pavan-jen-integration
+# Required metadata
+sonar.projectKey=org.sonarqube:scmgalaxy1
+sonar.projectName=pavan-jen-pipeline-1
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
@@ -14,7 +12,8 @@ sonar.language=java
 
 #sonar.profile=Weekend
 
-sonar.java.binaries=compiled
+#sonar.java.binaries=compiled
+sonar.java.binaries=server/target/classes
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
